// Vitest Snapshot v1

exports[`RenderAPI snapshots > commit-only synthetic entries (sourceCommit + no author url) 1`] = `
"# 🚀 v4.1.0 • April 05, 2026 
![BUMP](https://img.shields.io/badge/BUMP-PATCH-green?style=flat-square) ![CHANGES](https://img.shields.io/badge/CHANGES-1-blue?style=flat-square) ![PACKAGES](https://img.shields.io/badge/PACKAGES-0-orange?style=flat-square)
### 🧹 CHORES 
* **Unknown** — Unrecognized commitlint items (no associated PR)   
  └ 🧑‍💻 - @ci-bot   
  <details>
  <summary>1 commit</summary>
    
    └ 🔘 - [\`abcdef1\`](https://github.com/acme/demo/commit/abcdef1234567890) Standalone commit 
  </details>
<br>"
`;

exports[`RenderAPI snapshots > default header 1`] = `
"# 🚀 [v2.0.0](https://github.com/acme/demo/compare/v1.9.0...v2.0.0) • April 05, 2026 
![BUMP](https://img.shields.io/badge/BUMP-MAJOR-red?style=flat-square) ![CHANGES](https://img.shields.io/badge/CHANGES-2-blue?style=flat-square) ![PACKAGES](https://img.shields.io/badge/PACKAGES-2-orange?style=flat-square)
### ✨ FEATURES 
* **#10** — Ship onboarding   
  └ 📦 - \`core\` • \`web\`   
  └ 🧑‍💻 - [@author](https://example.com/author) 
<br>
### 🐛 FIXES 
* **#11** — Fix race condition   
  └ 📦 - \`core\`   
  └ 🧑‍💻 - [@author](https://example.com/author) 
<br>"
`;

exports[`RenderAPI snapshots > default layout renders top-level visual summary 1`] = `
"# 🚀 [v4.0.7](https://github.com/acme/demo/compare/v4.0.6...v4.0.7) • April 05, 2026 
![BUMP](https://img.shields.io/badge/BUMP-PATCH-green?style=flat-square) ![CHANGES](https://img.shields.io/badge/CHANGES-3-blue?style=flat-square) ![PACKAGES](https://img.shields.io/badge/PACKAGES-3-orange?style=flat-square)
### ✨ FEATURES 
* **#57** — Ship composer   
  └ 📦 - \`core\`   
  └ 🧑‍💻 - [@author](https://example.com/author) 
* **#58** — Ship presets   
  └ 📦 - \`web\`   
  └ 🧑‍💻 - [@author](https://example.com/author) 
<br>
### 🐛 FIXES 
* **#59** — Fix lint script   
  └ 📦 - \`cli\`   
  └ 🧑‍💻 - [@author](https://example.com/author) 
<br>"
`;

exports[`RenderAPI snapshots > empty change list renders a friendly empty-state note 1`] = `
"# 🚀 v4.0.5 • April 05, 2026 
![BUMP](https://img.shields.io/badge/BUMP-PATCH-green?style=flat-square) ![CHANGES](https://img.shields.io/badge/CHANGES-0-blue?style=flat-square) ![PACKAGES](https://img.shields.io/badge/PACKAGES-0-orange?style=flat-square)
No user-facing changes since the last tag."
`;

exports[`RenderAPI snapshots > keeps multi-package metadata stable 1`] = `
"# 🚀 v4.0.2 • April 05, 2026 
![BUMP](https://img.shields.io/badge/BUMP-PATCH-green?style=flat-square) ![CHANGES](https://img.shields.io/badge/CHANGES-2-blue?style=flat-square) ![PACKAGES](https://img.shields.io/badge/PACKAGES-2-orange?style=flat-square)
### 🐛 FIXES 
* **#52** — Align package order   
  └ 📦 - \`core\` • \`web\`   
  └ 🧑‍💻 - [@author](https://example.com/author) 
* **#53** — Keep grouping stable   
  └ 📦 - \`core\` • \`web\`   
  └ 🧑‍💻 - [@author](https://example.com/author) 
<br>"
`;

exports[`RenderAPI snapshots > large mixed release snapshot 1`] = `
"# 🚀 [v3.4.0](https://github.com/acme/demo/compare/v2.9.0...v3.4.0) • April 05, 2026 
![BUMP](https://img.shields.io/badge/BUMP-MAJOR-red?style=flat-square) ![CHANGES](https://img.shields.io/badge/CHANGES-7-blue?style=flat-square) ![PACKAGES](https://img.shields.io/badge/PACKAGES-3-orange?style=flat-square)
### 💥 BREAKING 
* **#20** — Drop legacy auth   
  └ 📦 - \`core\`   
  └ 🧑‍💻 - [@author](https://example.com/author) 
<br>
### ✨ FEATURES 
* **#21** — Add cache layer   
  └ 📦 - \`core\`   
  └ 🧑‍💻 - [@author](https://example.com/author) 
* **#22** — Add dashboard   
  └ 📦 - \`web\`   
  └ 🧑‍💻 - [@author](https://example.com/author) 
<br>
### 🐛 FIXES 
* **#23** — Fix pagination   
  └ 📦 - \`web\`   
  └ 🧑‍💻 - [@author](https://example.com/author) 
* **#24** — Fix typo   
  └ 🧑‍💻 - [@author](https://example.com/author) 
<br>
### 🧹 CHORES 
* **#25** — Bump deps   
  └ 📦 - \`cli\`   
  └ 🧑‍💻 - [@author](https://example.com/author) 
* **#26** — Refactor scripts   
  └ 🧑‍💻 - [@author](https://example.com/author) 
<br>"
`;

exports[`RenderAPI snapshots > multi-package metadata is normalized 1`] = `
"# 🚀 [v3.4.1](https://github.com/acme/demo/compare/v3.3.0...v3.4.1) • April 05, 2026 
![BUMP](https://img.shields.io/badge/BUMP-MINOR-yellow?style=flat-square) ![CHANGES](https://img.shields.io/badge/CHANGES-2-blue?style=flat-square) ![PACKAGES](https://img.shields.io/badge/PACKAGES-2-orange?style=flat-square)
### ✨ FEATURES 
* **#30** — Ship shared auth layer   
  └ 📦 - \`core\` • \`web\`   
  └ 🧑‍💻 - [@author](https://example.com/author) 
* **#31** — Expand auth docs   
  └ 📦 - \`core\` • \`web\`   
  └ 🧑‍💻 - [@author](https://example.com/author) 
<br>"
`;

exports[`RenderAPI snapshots > renders sectioned list 1`] = `
"# 🚀 [v4.0.1](https://github.com/acme/demo/compare/v4.0.0...v4.0.1) • April 05, 2026 
![BUMP](https://img.shields.io/badge/BUMP-PATCH-green?style=flat-square) ![CHANGES](https://img.shields.io/badge/CHANGES-2-blue?style=flat-square) ![PACKAGES](https://img.shields.io/badge/PACKAGES-2-orange?style=flat-square)
### ✨ FEATURES 
* **#50** — Add keyboard shortcuts   
  └ 📦 - \`web\`   
  └ 🧑‍💻 - [@author](https://example.com/author) 
<br>
### 🐛 FIXES 
* **#51** — Handle null session   
  └ 📦 - \`core\`   
  └ 🧑‍💻 - [@author](https://example.com/author) 
<br>"
`;

exports[`RenderAPI snapshots > section icons come from user config changeTypeEmojis 1`] = `
"# 🚀 [v4.0.9](https://github.com/acme/demo/compare/v4.0.8...v4.0.9) • April 05, 2026 
![BUMP](https://img.shields.io/badge/BUMP-PATCH-green?style=flat-square) ![CHANGES](https://img.shields.io/badge/CHANGES-2-blue?style=flat-square) ![PACKAGES](https://img.shields.io/badge/PACKAGES-2-orange?style=flat-square)
### 🚀 FEATURES 
* **#61** — Ship inline editor   
  └ 📦 - \`web\`   
  └ 🧑‍💻 - [@author](https://example.com/author) 
<br>
### 🛠️ FIXES 
* **#62** — Handle stale cache   
  └ 📦 - \`core\`   
  └ 🧑‍💻 - [@author](https://example.com/author) 
<br>"
`;

exports[`RenderAPI snapshots > unknown package labels fall back to raw names with links when available 1`] = `
"# 🚀 [v4.0.3](https://github.com/acme/demo/compare/v4.0.2...v4.0.3) • April 05, 2026 
![BUMP](https://img.shields.io/badge/BUMP-PATCH-green?style=flat-square) ![CHANGES](https://img.shields.io/badge/CHANGES-1-blue?style=flat-square) ![PACKAGES](https://img.shields.io/badge/PACKAGES-1-orange?style=flat-square)
### ✨ FEATURES 
* **#54** — Wire analytics hook   
  └ 📦 - \`sdk\`   
  └ 🧑‍💻 - [@author](https://example.com/author) 
<br>"
`;
